<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kids Notes</string>
    <string name="login_title">Welcome to Kids Notes</string>
    <string name="login_subtitle">Secure your notes with biometric authentication</string>
    <string name="authenticate_button">Authenticate</string>
    <string name="note_details">Note Details</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Write your note here...</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="empty_notes">No notes yet. Tap + to add one!</string>
    <string name="notes_list">My Notes</string>
</resources>
